fix: use a more general interface to cast permissions
(cherry picked from commit c281a290f3572f04a94e240edb98b2fc5b1fd378)